force-app/main/default/objects/AAO_Participant__c/AAO_Participant__c.object-meta.xml
<CustomObject>
    <description>Who was on a piece of evidence. One row per Source per person, written at ingest. It exists because participation was not queryable: the roster is JSON in a long text field and SOQL cannot filter into a text blob, so "have we met this person" could not be asked of the database at all. Ruled v1.1. The argument is key four's argument: a grain not recorded cannot be declared later without reprocessing the corpus.</description>
    <label>AAO Participant</label>
    <nameField>
        <displayFormat>PT-{00000000}</displayFormat>
        <label>AAO Participant Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AAO Participants</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>