force-app/main/default/objects/AAO_Participant__c/fields/AAO_Account__c.field-meta.xml
<CustomField>
    <fullName>AAO_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Written by: the participant writer, denormalized from the Source. Read by: coverage scoping, so a per-deal count is one query rather than a traversal.</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>AAO Participants</relationshipLabel>
    <relationshipName>AAO_Participants</relationshipName>
    <type>Lookup</type>
</CustomField>