force-app/main/default/objects/AAO_Participant__c/fields/AAO_Artifact_SHA256__c.field-meta.xml
<CustomField>
    <fullName>AAO_Artifact_SHA256__c</fullName>
    <description>Written by: the participant writer, from the Source. THE SOURCE-EVENT KEY, and the reason this field is here rather than left to a join. A ninety-minute call arrives as two or three Source rows of ONE artifact, so counting participant rows would count one conversation twice. Coverage counts DISTINCT artifact hashes, which collapses parts of one call to one occasion by construction, exactly as the movement counter does.</description>
    <label>Artifact SHA256</label>
    <length>64</length>
    <type>Text</type>
</CustomField>