force-app/main/default/objects/AAO_Participant__c/fields/AAO_Contact__c.field-meta.xml
<CustomField>
    <fullName>AAO_Contact__c</fullName>
    <description>Written by: the participant writer, where the roster entry resolves to a Contact. NULLABLE ON PURPOSE: a participant who is not a Contact is exactly the Shadow case, and refusing the row would lose the fact that they were on the call at all.</description>
    <label>Contact</label>
    <type>Lookup</type>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>AAO Participants</relationshipLabel>
    <relationshipName>AAO_Participants</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>