force-app/main/default/objects/AAO_Participant__c/fields/AAO_Display_Name__c.field-meta.xml
<CustomField>
    <fullName>AAO_Display_Name__c</fullName>
    <description>Written by: the participant writer, from the roster. What the artifact called this person.</description>
    <label>Display Name</label>
    <type>Text</type>
    <length>255</length>
</CustomField>