force-app/main/default/objects/AAO_Participant__c/fields/AAO_Email__c.field-meta.xml
<CustomField>
    <fullName>AAO_Email__c</fullName>
    <description>Written by: the participant writer, from the roster. Read by: identity resolution and the internal-domain test.</description>
    <label>Email</label>
    <type>Email</type>
</CustomField>