force-app/main/default/objects/AAO_Participant__c/fields/AAO_Evidence_Occurred__c.field-meta.xml
<CustomField>
    <fullName>AAO_Evidence_Occurred__c</fullName>
    <description>Written by: the participant writer, denormalized from the Source. DENORMALIZED ON PURPOSE: Coverage asks "recently" and "regularly", which are window counts, and a window count that has to traverse to the parent to read a date is not one query.</description>
    <label>Evidence Occurred</label>
    <type>DateTime</type>
</CustomField>