force-app/main/default/objects/AAO_Participant__c/fields/AAO_Participant_Key__c.field-meta.xml
<CustomField>
    <fullName>AAO_Participant_Key__c</fullName>
    <description>Written by: the participant writer. Source id plus roster key. Unique, so re-ingesting an artifact cannot double-count a person, which would inflate every coverage answer that rests on a count.</description>
    <label>Participant Key</label>
    <type>Text</type>
    <length>120</length>
    <required>true</required>
    <unique>true</unique>
    <externalId>true</externalId>
</CustomField>