force-app/main/default/objects/AAO_Participant__c/fields/AAO_Roster_Key__c.field-meta.xml
<CustomField>
    <fullName>AAO_Roster_Key__c</fullName>
    <description>Written by: the participant writer. The roster key this person speaks under in the normalized text. Always present, even when the Contact lookup is null, because it is what the spans point at.</description>
    <label>Roster Key</label>
    <type>Text</type>
    <length>80</length>
    <required>true</required>
</CustomField>