force-app/main/default/objects/AAO_Participant__c/fields/AAO_Source__c.field-meta.xml
<CustomField>
    <fullName>AAO_Source__c</fullName>
    <description>Written by: the participant writer at ingest. Read by: everything. Which piece of evidence this person appeared on.</description>
    <label>Source</label>
    <type>Lookup</type>
    <referenceTo>AAO_Source__c</referenceTo>
    <relationshipLabel>AAO Participants</relationshipLabel>
    <relationshipName>AAO_Participants</relationshipName>
    <deleteConstraint>Restrict</deleteConstraint>
    <required>true</required>
</CustomField>