force-app/main/default/objects/AAO_Participant__c/fields/AAO_Substantive__c.field-meta.xml
<CustomField>
    <fullName>AAO_Substantive__c</fullName>
    <description>Written by: the participant writer, from the Source's substantive offset and duration. Read by: Coverage questions two and three, which say MEANINGFUL and HIGH QUALITY rather than merely counting occasions. A junction counts occasions; this is the only thing on it that speaks to substance, and the threshold behind it is a MEASURED number that no document carries until it is measured.</description>
    <label>Substantive</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>