force-app/main/default/objects/AAO_Participant__c/fields/AAO_Synthetic__c.field-meta.xml
<CustomField>
    <fullName>AAO_Synthetic__c</fullName>
    <description>Written by: the trigger, from the standing marker. Ratified as a permanent field on every AAO object.</description>
    <label>Synthetic</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>